<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Analiizo by Miido</string>
    <string name="app_alias">analiizo</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar</string>
    <string name="title_activity_main_menu">main_menu</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_master">master</string>

    <string name="title_activity_settings">settings</string>
    <string name="title_activity_find_search">find_search</string>
    <string name="title_activity_synchronizer">synchronizer</string>

    <string name="newPoll">NUEVA ENCUESTA</string>
    <string name="findSearch">CONSULTAR / EXAMINAR</string>
    <string name="assessment">ESTADISTICAS</string>
    <string name="settings">AJUSTES</string>
    <string name="updateSuscribers">ACTUALIZAR AFILIADOS</string>
    <string name="sendPolls">ENVIAR ENUESTAS</string>
    <string name="updateApp">ACTUALIZAR APLICACION</string>
    <string name="updatePolls">ACTUALIZAR ENCUESTAS</string>
    <string name="back">REGRESAR</string>
    <string name="exit">SALIR</string>
    <string name="title_activity_statistics">statistics</string>

    <string name="hello_world">Hello world!</string>

</resources>
