<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.miido.miido.settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/fl"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:background="#FFFFFF">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_gravity="left|top"
                android:src="@drawable/analiizo_l_header" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="180dp"
                android:layout_height="100dp"
                android:layout_gravity="right|top"
                android:src="@drawable/analiizo_r_header" />
        </FrameLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="#FFFFFF"
            android:shrinkColumns="*"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView />

                <RelativeLayout android:gravity="center">

                    <LinearLayout
                        android:id="@+id/syncData"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#ff00c134"
                        android:gravity="center"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="5dp"
                            android:background="#ff00ff50" />

                        <ImageView
                            android:id="@+id/isyncData"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="60dp"
                            android:layout_marginRight="60dp"
                            android:layout_marginTop="50dp"
                            android:background="#ff00c134"
                            android:baselineAlignBottom="false"
                            android:clickable="true"
                            android:src="@drawable/ic_archive_48px"
                            android:visibility="visible" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="30dp"
                            android:layout_marginTop="20dp"
                            android:background="#ff00c134"
                            android:text="@string/updateSuscribers"
                            android:textColor="@color/primary_text_default_material_dark" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="5dp"
                            android:background="#ff00902c" />
                    </LinearLayout>
                </RelativeLayout>

                <RelativeLayout android:gravity="center">

                    <LinearLayout
                        android:id="@+id/loadData"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/primary_dark_material_light"
                        android:gravity="center"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="5dp"
                            android:background="#ff949494" />

                        <ImageView
                            android:id="@+id/iloadData"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="60dp"
                            android:layout_marginRight="60dp"
                            android:layout_marginTop="50dp"
                            android:background="@color/primary_dark_material_light"
                            android:baselineAlignBottom="false"
                            android:clickable="true"
                            android:src="@drawable/ic_send_48px"
                            android:visibility="visible" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="30dp"
                            android:layout_marginTop="20dp"
                            android:background="@color/primary_dark_material_light"
                            android:text="@string/sendPolls"
                            android:textColor="@color/primary_text_default_material_dark" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="5dp"
                            android:background="#ff646464" />
                    </LinearLayout>
                </RelativeLayout>

                <TextView />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_height="25dp"
                    android:background="#FFFFFF" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView />

                <RelativeLayout android:gravity="center">

                    <LinearLayout
                        android:id="@+id/updateApp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/primary_dark_material_light"
                        android:gravity="center"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="5dp"
                            android:background="#ff949494" />

                        <ImageView
                            android:id="@+id/iupdateApp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="60dp"
                            android:layout_marginRight="60dp"
                            android:layout_marginTop="50dp"
                            android:background="@color/primary_dark_material_light"
                            android:baselineAlignBottom="false"
                            android:clickable="true"
                            android:src="@drawable/ic_get_app_48px"
                            android:visibility="visible" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="30dp"
                            android:layout_marginTop="20dp"
                            android:background="@color/primary_dark_material_light"
                            android:text="@string/updateApp"
                            android:textColor="@color/primary_text_default_material_dark" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="5dp"
                            android:background="#ff646464" />
                    </LinearLayout>
                </RelativeLayout>

                <RelativeLayout android:gravity="center">

                    <LinearLayout
                        android:id="@+id/syncGeneralParams"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#ff00c134"
                        android:gravity="center"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="5dp"
                            android:background="#ff00ff50" />

                        <ImageView
                            android:id="@+id/isyncGeneralParams"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="60dp"
                            android:layout_marginRight="60dp"
                            android:layout_marginTop="50dp"
                            android:background="#ff00c134"
                            android:baselineAlignBottom="false"
                            android:clickable="true"
                            android:src="@drawable/ic_inbox_48px"
                            android:visibility="visible" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="30dp"
                            android:layout_marginTop="20dp"
                            android:background="#ff00c134"
                            android:text="@string/updatePolls"
                            android:textColor="@color/primary_text_default_material_dark" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="5dp"
                            android:background="#ff00902c" />
                    </LinearLayout>
                </RelativeLayout>

                <TextView />
            </TableRow>

            <TableRow>

                <TextView />
            </TableRow>
        </TableLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ff00c134"
                android:gravity="center"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="#ff00ff50" />

                <ImageView
                    android:id="@+id/iBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="60dp"
                    android:layout_marginTop="50dp"
                    android:background="#ff00c134"
                    android:baselineAlignBottom="false"
                    android:clickable="true"
                    android:src="@drawable/ic_reply_48px"
                    android:visibility="visible" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="20dp"
                    android:background="#ff00c134"
                    android:text="@string/back"
                    android:textColor="@color/primary_text_default_material_dark" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="#ff00902c" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>
