<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFF"
    tools:context="com.miido.miido.main_menu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/fl"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="15dp"
            android:background="#FFFFFF"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/header" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/analiizo_l_header" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="280dp"

            android:layout_gravity="center"
            android:background="#FFFFFF"
            android:shrinkColumns="*"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView />

                <RelativeLayout android:gravity="center">

                    <LinearLayout
                        android:id="@+id/create"
                        android:layout_width="wrap_content"
                        android:layout_height="130dp"
                        android:background="#ff00c134"
                        android:gravity="center"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="5dp"
                            android:background="#ff00ff50" />

                        <ImageView
                            android:id="@+id/icreate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center|top"
                            android:layout_marginLeft="60dp"
                            android:layout_marginRight="60dp"
                            android:layout_marginTop="25dp"
                            android:background="#ff00c134"
                            android:clickable="true"
                            android:src="@drawable/ic_assignment_48px"
                            android:visibility="visible" />
                        <!--android:baselineAlignBottom="false"!-->

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="20dp"
                            android:layout_marginTop="10dp"
                            android:background="#ff00c134"
                            android:text="@string/newPoll"
                            android:textColor="@color/primary_text_default_material_dark" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="5dp"
                            android:background="#ff00902c" />
                    </LinearLayout>
                </RelativeLayout>

                <RelativeLayout android:gravity="center">

                    <LinearLayout
                        android:id="@+id/search"
                        android:layout_width="wrap_content"
                        android:layout_height="130dp"
                        android:background="@color/primary_dark_material_light"
                        android:gravity="center"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="5dp"
                            android:background="#ff949494" />

                        <ImageView
                            android:id="@+id/isearch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="60dp"
                            android:layout_marginRight="60dp"
                            android:layout_marginTop="25dp"
                            android:background="@color/primary_dark_material_light"

                            android:clickable="true"
                            android:src="@drawable/ic_search_48px"
                            android:visibility="visible" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="20dp"
                            android:layout_marginTop="10dp"
                            android:background="@color/primary_dark_material_light"
                            android:text="@string/findSearch"
                            android:textColor="@color/primary_text_default_material_dark" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="5dp"
                            android:background="#ff646464" />
                    </LinearLayout>
                </RelativeLayout>

                <TextView />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_height="25dp"
                    android:background="#FFFFFF" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView />

                                <RelativeLayout android:gravity="center">

                                    <LinearLayout
                                        android:id="@+id/graphChart"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:background="@color/primary_dark_material_light"
                                        android:gravity="center"
                                        android:orientation="vertical">

                                        <RelativeLayout
                                            android:layout_width="match_parent"
                                            android:layout_height="5dp"
                                            android:background="#ff949494" />

                                        <ImageView
                                            android:id="@+id/igraphChart"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_gravity="center"
                                            android:layout_marginLeft="60dp"
                                            android:layout_marginRight="60dp"
                                            android:layout_marginTop="25dp"
                                            android:background="@color/primary_dark_material_light"
                                            android:baselineAlignBottom="false"
                                            android:clickable="true"
                                            android:src="@drawable/ic_assessment_48px"
                                            android:visibility="visible" />

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_gravity="center"
                                            android:layout_marginBottom="20dp"
                                            android:layout_marginTop="10dp"
                                            android:background="@color/primary_dark_material_light"
                                            android:text="@string/assessment"
                                            android:textColor="@color/primary_text_default_material_dark" />

                                        <RelativeLayout
                                            android:layout_width="match_parent"
                                            android:layout_height="5dp"
                                            android:background="#ff646464" />
                                    </LinearLayout>
                                </RelativeLayout>

                <RelativeLayout
                    android:gravity="center">

                    <LinearLayout
                        android:id="@+id/settings"
                        android:layout_width="wrap_content"
                        android:layout_height="150dp"
                        android:background="#ff00c134"
                        android:gravity="center"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="5dp"
                            android:background="#ff00ff50" />

                        <ImageView
                            android:id="@+id/isettings"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="60dp"
                            android:layout_marginRight="60dp"
                            android:layout_marginTop="25dp"
                            android:background="#ff00c134"
                            android:baselineAlignBottom="false"
                            android:clickable="true"
                            android:src="@drawable/ic_settings_48px"
                            android:visibility="visible" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="20dp"
                            android:layout_marginTop="10dp"
                            android:background="#ff00c134"
                            android:text="@string/settings"
                            android:textColor="@color/primary_text_default_material_dark" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="5dp"
                            android:background="#ff00902c" />
                    </LinearLayout>
                </RelativeLayout>

                <TextView />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</FrameLayout>
